# manjaro-torrent-find

./: .gitignore  README.rst  pyproject.toml
manjaro_torrent_find/: __init__.py  mtf.py
